apps/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: lab
spec:
  type: ClusterIP
  ports:
  - port: 6052
    name: http 
  selector:
    app: esphome
