apps/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  namespace: lab
  annotations:
    nginx.org/websocket-services: "esphome"
    cert-manager.io/cluster-issuer: "letsencrypt-dns01-cloudflare"
spec:
  ingressClassName: nginx
  rules:
  - host: esphome.vbalex.com
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: esphome
              port:
                name: http
  tls: 
  - hosts:
    - esphome.vbalex.com
    secretName: tls-com-vbalex-esphome
